# mysite

./: README.md  pyproject.toml  to_deploy.txt
mysite/: settings.py  urls.py
render/templates/render/: index.html
